Fix notification z-index

--- a/css/NotificationWidget.css
+++ b/css/NotificationWidget.css
@@ -4,6 +4,7 @@
     right: 0px;
     top: 21px;
     text-align: center;
+    z-index: 21000000;
 }
 
 .notification-process {
